--- a/class/Landing.html
+++ b/class/Landing.html
@@ -69,7 +69,7 @@
         </nav>
         <nav class="navbar navbar-expand-lg p-3 mb-2 bg-dark-subtle text-emphasis-dark">
           <div class="container-fluid">
-            <img src="../Pictures/1.png" style=width:300px;height:60px;>
+            <img src="../Pictures/1.png" style=width:200px;height:60px;>
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -83,7 +83,7 @@
                   <a class="nav-link" href="About-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Sevices.php">Services</a>
+                  <a class="nav-link" href="Industry.html">Services</a>
 
         </li>
         </ul>
