--- a/class/About-us.html
+++ b/class/About-us.html
@@ -84,7 +84,11 @@
       <a class="nav-link" href="About-us.html">About Us</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Industry.html">Services</a>
+      <a class="nav-link" href="Industry.html">Industry Partners</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="About-us.html">Services</a>
+  </li>
 
 </li>
 </ul>
