--- a/class/Industry.html
+++ b/class/Industry.html
@@ -84,7 +84,11 @@
       <a class="nav-link" href="About-us.html">About Us</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Industry.html">Services</a>
+      <a class="nav-link" href="Industry.html">Industry Partners</a>
+    </li>
+      <li class="nav-item">
+        <a class="nav-link" href="About-us.html">Services</a>
+    </li>
 
 </li>
 </ul>
@@ -101,9 +105,7 @@
 <div id="wsb-element-4727e0ac-bd60-4feb-ac48-12b128003179" class="wsb-element-image"> <div class="wsb-image-inner "><div class="img"><img src="../Pictures/2.png" style="vertical-align:middle;width:1521px;height:107px;"></div></div> </div>
 <div id="wsb-element-f1db1d09-e66d-42c2-a21c-c3c0c667d8c4" class="wsb-element-image"> <div class="wsb-image-inner "><div class="img"><a href="https://www.youtube.com/channel/UCFYOk74Z1TC-ycvrIaY7cxA" target="_blank" rel=""><img src="//nebula.wsimg.com/3994c986ed43e6a7a99da4a114842f8f?AccessKeyId=8A113EA260805AF1D77C&amp;disposition=0&amp;alloworigin=1" style="vertical-align:middle;width:35px;height:25px;"></a></div></div> </div>
 
-<li><a href="javascript:void(0)"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-</svg></a></li>
+
 
 
 
